fix css names clash (changed .invisible to .hidden)

--- a/src/app/shared/scss/button.scss
+++ b/src/app/shared/scss/button.scss
@@ -16,6 +16,6 @@ button.label {
   min-width: 0;
 }
 
-.invisible {
+.hidden {
   display: none;
 }
